[DP-0000] Setup DeltaIo Fork for AIQ